# SwotDB

./: .gitignore  README.md  pyproject.toml  swotdb.py
SwotDB/: __init__.py  swotdb.py
SwotDB/src/: index.py  query.py
src/: index.py  query.py
